--- a/01-calculadora/src/app/calculadora/components/calculadora.component.html
+++ b/01-calculadora/src/app/calculadora/components/calculadora.component.html
@@ -8,6 +8,7 @@
               <div class="col-xs-3">
                 <button 
                   type="button" 
+                  (click)="limpar()"
                   class="btn btn-danger kz-btn">C
                 </button>
               </div>
@@ -17,6 +18,7 @@
                   class="form-control text-right kz-input-text"
                   id="display" 
                   name="display" 
+                  [value]="display"
                   readonly>
               </div>
             </div>
@@ -25,6 +27,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('7')"
                   id="btn7">7
                 </button>
               </div>
@@ -32,13 +35,15 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('8')"
                   id="btn8">8
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('9')" 
                   id="btn9">9
                 </button>
               </div>
@@ -46,6 +51,7 @@
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
+                  (click)="definiOperacao('/')"
                   id="btnDivisao">/
                 </button>
               </div>
@@ -55,13 +61,15 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('4')"
                   id="btn4">4
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-default kz-btn" 
+                  class="btn btn-default kz-btn"
+                  (click)="adicionarNumero('5')" 
                   id="btn5">5
                 </button>
               </div>
@@ -69,13 +77,15 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('6')"
                   id="btn6">6
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-warning kz-btn"  
+                  class="btn btn-warning kz-btn"
+                  (click)="definiOperacao('*')"  
                   id="btnMIltiplicacao">*
                 </button>
               </div>
@@ -85,6 +95,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('1')"
                   id="btn1">1
                 </button>
               </div>
@@ -92,6 +103,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('2')"
                   id="btn2">2
                 </button>
               </div>
@@ -99,6 +111,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('3')"
                   id="btn3">3
                 </button>
               </div>
@@ -106,6 +119,7 @@
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
+                  (click)="definiOperacao('-')"
                   id="btnSubtracao">-
                 </button>
               </div>
@@ -115,6 +129,7 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('0')"
                   id="btn0">0
                 </button>
               </div>
@@ -122,13 +137,15 @@
                 <button 
                   type="button" 
                   class="btn btn-default kz-btn" 
+                  (click)="adicionarNumero('.')"
                   id="btnDecimal">.
                 </button>
               </div>
               <div class="col-xs-3">
                 <button 
                   type="button" 
-                  class="btn btn-success kz-btn" 
+                  class="btn btn-success kz-btn"
+                  (click)="calcular()" 
                   id="btnCalcular">=
                 </button>
               </div>
@@ -136,6 +153,7 @@
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
+                  (click)="definiOperacao('+')"
                   id="btnSoma">+
                 </button>
               </div>
