--- a/01-calculadora/src/styles.css
+++ b/01-calculadora/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+h1{
+    margin:15px;
+    padding:15px
+}
+
+p {
+    margin:15px;
+    padding:15px
+}
