--- a/04-conversor-de-moedas/src/app/conversor/components/conversor.component.html
+++ b/04-conversor-de-moedas/src/app/conversor/components/conversor.component.html
@@ -53,4 +53,11 @@
 	  </form>
 	 </div>
 	
+	<modal-cotacao
+		[id]="'modalCotacao'"
+		[conversaoResponse]="conversaoResponse"
+		[conversao]="conversao"
+		(onConfirm)="init()">
+	</modal-cotacao>
+	
 </div>
